# experiment-graphs

./: .gitignore  README.md  pyproject.toml
bots/: README.md  bot.py  pyproject.toml
bots/infra/: main.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars
bots/tests/: test_bot.py
infra/: main.tf  outputs.tf  terraform.tfvars  variables.tf
ingest/: bucket_upload.sh  ingest_messages.py  process_messages.py  readjson.sql  reformat.ipynb
