[tool.poetry]
name = "groupme-bots"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
functions-framework = "^3.0.0"
requests = "^2.28.1"
google-cloud-secret-manager = "^2.12.6"
jupyter = "^1.0.0"
duckdb = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
